Fix double scrollbar in Firefox :P

--- a/source/sass/core/_document.scss
+++ b/source/sass/core/_document.scss
@@ -24,7 +24,6 @@ body {
 html,
 body {
     width: 100%;
-    overflow-x: hidden;
 }
 
 
